--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cylander is a non profit association dedicated to provide and produce free Cyber Security Knowledge",
   "scripts": {
     "start": "web-dev-server --config web-dev-server.config.mjs",
-    "format": "prettier --write \"src/**/*.js\""
+    "format": "prettier --write \"js/**/*.js\""
   },
   "dependencies": {
     "phaser": "^3.60.0"
