--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Cylander is a non profit association dedicated to provide and produce free Cyber Security Knowledge",
   "scripts": {
     "start": "web-dev-server --config web-dev-server.config.mjs",
-    "format": "prettier --write \"js/**/*.js\""
+    "format": "prettier --write \"js/**/*.js\"",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "phaser": "^3.60.0"
@@ -12,6 +14,13 @@
   "devDependencies": {
     "@web/dev-server": "^0.3.0",
     "eslint": "^8.45.0",
+    "husky": "^8.0.3",
     "prettier": "^3.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint:fix",
+      "pre-push": "npm run lint"
+    }
   }
 }
