--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cylander is a non-profit association dedicated to providing and producing free Cyber Security Knowledge",
   "scripts": {
     "start": "web-dev-server --config web-dev-server.config.mjs",
-    "format": "prettier --write \"src/**/*.js\"",
+    "format": "prettier --write \"**/**/*.js\" --config .prettierrc.json",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "generate-scene": "node ./scene-generator/generate-scene.js"
