--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "format": "prettier --write \"**/**/*.js\" --config .prettierrc.json",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "generate-scene": "node ./scene-generator/generate-scene.js"
+    "generate:all": "node ./scene-generator/generateAllScenes.js"
   },
   "dependencies": {
     "phaser": "^3.60.0"
