--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "web-dev-server --config web-dev-server.config.mjs",
     "start:watch": "concurrently 'npm run start' 'npx nodemon --watch ./scene-generator --exec \"npm run generate:all\"'",
+    "test": "jest",
+    "test:browser": "jest --config=jest.config.js --testPathPattern=tests/browser",
+    "test:node": "jest --config=jest.config.js --testPathPattern=tests/node",
     "format": "prettier --write \"**/**/*.js\" --config .prettierrc.json",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -15,9 +18,12 @@
   },
   "devDependencies": {
     "@web/dev-server": "^0.3.0",
+    "@web/test-runner": "^0.17.0",
     "concurrently": "^8.2.0",
     "eslint": "^8.45.0",
     "husky": "^8.0.3",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "prettier": "^3.0.0"
   },
   "husky": {
