chore: add test validation to pre-commit hook

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint:fix && npm run format",
+      "pre-commit": "npm run test && npm run lint:fix && npm run format",
       "pre-push": "npm run lint"
     }
   }
