--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "web-dev-server --config web-dev-server.config.mjs",
     "start:watch": "concurrently 'npm run start' 'npx nodemon --watch ./scene-generator --exec \"npm run generate:all\"'",
-    "test": "jest --verbose",
+    "test": "jest --verbose --coverage",
     "test:browser": "jest --config=jest.config.js --testPathPattern=tests/browser",
     "test:node": "jest --config=jest.config.js --testPathPattern=tests/node",
     "format": "prettier --write \"**/**/*.js\" --config .prettierrc.json",
