chore: use cross-env for compatibility

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "format": "prettier --write \"**/**/*.js\" --config .prettierrc.json",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "generate:prod:all": "NODE_ENV=production  node ./scene-generator/generateAllScenes.js",
-    "generate:dev:all": "NODE_ENV=development  node ./scene-generator/generateAllScenes.js"
+    "generate:prod:all": "cross-env NODE_ENV=production  node ./scene-generator/generateAllScenes.js",
+    "generate:dev:all": "cross-env NODE_ENV=development  node ./scene-generator/generateAllScenes.js"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "phaser": "^3.60.0"
   },
   "devDependencies": {
